# nostalgia

./: .gdbinit  .gdblogger.json  .gitignore  .liccor  .liccor.yml  .tracy.json  CMakeLists.txt  Dockerfile  Jenkinsfile  Makefile  README.md  build_rom.sh  conanfile.py  conanfile.txt  developer-handbook.md  main.cpp  media_header.txt  mg.yml
cmake/Modules/: GBA.cmake  Native.cmake
cmake/modules/: FindSDL2.cmake
jenkins/gba/: Jenkinsfile
jenkins/linux/: Jenkinsfile
jenkins/mac/: Jenkinsfile
jenkins/shared/: env.gy  native-build.gy
sample_project/: App.json
sample_project/.nostalgia/type_descriptors/: net.drinkingtea.nostalgia.core.NostalgiaGraphic  net.drinkingtea.nostalgia.core.NostalgiaPalette
sample_project/Palettes/: Background.npal  Charset.npal  Dirt.npal
sample_project/TileSheets/: Background.ng  Charset.ng  Dirt.ng
scripts/: build_rom.sh  gba-pkg  newcpp  pkg-gba  pybb  run-make  setup-build  setup-build.ps1  setup-build.py  setup_build
src/: CMakeLists.txt
src/common/: CMakeLists.txt  bounds.cpp  bounds.hpp  common.hpp  memops.cpp  memops.hpp  point.cpp  point.hpp
src/core/: CMakeLists.txt  core.cpp  core.hpp  gfx.hpp  types.hpp
src/core/gba/: addresses.hpp  core.cpp  dirt.h  dirt.s  gba.hpp  gfx.cpp  media.cpp  registers.hpp
src/core/qt/: gfx.cpp
src/nostalgia/: CMakeLists.txt  Makefile
src/nostalgia/common/: CMakeLists.txt  bounds.cpp  bounds.hpp  common.hpp  fileaddr.hpp  point.cpp  point.hpp  size.hpp
src/nostalgia/core/: CMakeLists.txt  color.hpp  config.hpp  consts.hpp  context.hpp  core.cpp  core.hpp  gfx.cpp  gfx.hpp  input.hpp  media.cpp  media.hpp  mem.hpp  types.hpp
src/nostalgia/core/gba/: CMakeLists.txt  addresses.hpp  bios.hpp  bios.s  core.arm.cpp  core.cpp  gba.hpp  gfx.cpp  gfx.hpp  irq.arm.cpp  irq.cpp  irq.hpp  irq.s  media.cpp  media.hpp  mem.cpp  panic.cpp  panic.hpp  tests.cpp
src/nostalgia/core/glfw/: CMakeLists.txt  core.cpp  core.hpp  gfx.cpp
src/nostalgia/core/qt/: CMakeLists.txt  gfx.cpp
src/nostalgia/core/sdl/: CMakeLists.txt  core.cpp  core.hpp  gfx.cpp
src/nostalgia/core/studio/: CMakeLists.txt  Pixel.qml  Tile.qml  TileSheetEditor.qml  consts.hpp  core-studio.json  imgconv.cpp  imgconv.hpp  import_tilesheet_wizard.cpp  import_tilesheet_wizard.hpp  module.cpp  module.hpp  new_tilesheet_wizard.cpp  new_tilesheet_wizard.hpp  newpalettewizard.cpp  newpalettewizard.hpp  paletteeditor.cpp  paletteeditor.hpp  plugin.cpp  plugin.hpp  rsrc.qrc  tilesheeteditor.cpp  tilesheeteditor.hpp  util.cpp  util.hpp
src/nostalgia/core/userland/: CMakeLists.txt  gfx.cpp  gfx.hpp  gfx_opengl.cpp  glutils.cpp  glutils.hpp  media.cpp  mem.cpp
src/nostalgia/glutils/: CMakeLists.txt  glutils.cpp  glutils.hpp
src/nostalgia/player/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  startup.s
src/nostalgia/scene/: CMakeLists.txt  scene.cpp  scene.hpp
src/nostalgia/studio/: CMakeLists.txt  Info.plist  builtinmodules.hpp  json.hpp  json_err.hpp  json_read.cpp  json_read.hpp  json_test.cpp  json_write.cpp  json_write.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  nostalgia-studio-dev.json  nostalgia-studio.json  nostalgia_rom.oxfs  oxfstreeview.cpp  oxfstreeview.hpp  studio.hpp  studiorsrc.qrc
src/nostalgia/studio/json/: json_operator.hpp  json_write.hpp  test.cpp
src/nostalgia/studio/lib/: CMakeLists.txt  context.hpp  editor.cpp  editor.hpp  json.hpp  json_err.hpp  json_read.cpp  json_read.hpp  json_test.cpp  json_write.cpp  json_write.hpp  module.cpp  module.hpp  oxfstreeview.cpp  oxfstreeview.hpp  plugin.cpp  plugin.hpp  project.cpp  project.hpp  wizard.cpp  wizard.hpp
src/nostalgia/tools/: CMakeLists.txt  pack.cpp
src/nostalgia/tools/lib/: CMakeLists.txt  pack.cpp  pack.hpp  tilesetimport.cpp  tilesetimport.hpp
src/nostalgia/tools/pack/: CMakeLists.txt  imgconv.cpp  imgconv.hpp  pack.cpp  pack.hpp
src/nostalgia/world/: CMakeLists.txt  world.cpp  world.hpp
src/nostalgia/world/studio/: CMakeLists.txt  consts.cpp  consts.hpp  newworldwizard.cpp  newworldwizard.hpp  world-studio.json  worldeditor.cpp  worldeditor.hpp  worldstudioplugin.cpp  worldstudioplugin.hpp
src/player/: CMakeLists.txt  main.cpp
src/studio/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp
src/studio/json/: CMakeLists.txt  json.hpp  json_read.cpp  json_write.cpp
src/studio/lib/: CMakeLists.txt  newwizard.cpp  newwizard.hpp  oxfstreeview.cpp  oxfstreeview.hpp  project.cpp  project.hpp
src/tools/: CMakeLists.txt  pack.cpp
